Z-index fix

--- a/app/src/less/debug-toolbar.less
+++ b/app/src/less/debug-toolbar.less
@@ -35,7 +35,8 @@
 
     &__toggler {
         position:absolute;
-        top:100%;
+        top:100%;        
         left:10px;
+        z-index:-1;
     }
 }
